8268390: G1 concurrent gc upgrade to full gc not working